--- a/docs/.template.md
+++ b/docs/.template.md
@@ -1,7 +1,9 @@
 ---
-title:
+title: Document title
 author: GitHub_UserName
+ms.author: joverslu
 description: Describe the element in one sentence.
+ms.date: 01/14/2021
 ---
 
 <!-- Ensure you remove all comments before submission, to ensure that there are no formatting issues when displaying this page.  -->
